# Autocorrelation

./: Makefile  README.md
cuda/: Makefile  cuda_rig.cu  cuda_rig.h  main.cu
openmp/: CMakeLists.txt  Makefile  main.cc  test_rig.cc  test_rig.h
simd/: CMakeLists.txt  Makefile  main.cc  test_rig.cc  test_rig.h
